--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,7 +41,7 @@ services:
       # lobby -> nome del db
       - MONGO_URI=mongodb://lobby-mongodb-container:27017/lobby
       # production or development
-      - NODE_ENV=development
+      - NODE_ENV=production
       # auth-service container url
       - AUTH_SERVICE_URL=http://login-api:${LOGIN_API_PORT}
       - PORT=${PORT}
