--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.8.2",
+    "socket.io": "^4.8.2",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
   }
