feat: configurazioni per connettere il gameplay-service

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,11 +41,16 @@ services:
       # lobby -> nome del db
       - MONGO_URI=mongodb://lobby-mongodb-container:27017/lobby
       # production or debug
-      - NODE_ENV=debug
+      - NODE_ENV=${NODE_ENV}
       # auth-service container url
       - AUTH_SERVICE_URL=${AUTH_SERVICE_URL}
       # origin url accepted by cors
-      - CORS_ORIGIN=http://localhost:5173
+      - CORS_ORIGIN=${CORS_ORIGIN}
+      # game-service conatiner url
+      - GAME_SERVICE_URL=${GAME_SERVICE_URL}
+      # info for internal network use
+      - LOBBY_X_INTERNAL_SERVICE_ID=${LOBBY_X_INTERNAL_SERVICE_ID}
+      - X_INTERNAL_SECRET=${X_INTERNAL_SECRET}
 
 networks:
   lobby-internal-net:
