--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ LOBBY_API_PORT=3001
 AUTH_SERVICE_URL=http://login-api:3000
 GAME_SERVICE_URL=http://gameplay-api:3000
 LOBBY_X_INTERNAL_SERVICE_ID=lobby-service
+GAMEPLAY_X_INTERNAL_SERVICE_ID=gameplay-service
 X_INTERNAL_SECRET=abcdefghijklmnopqrstuvwxyz1234567890
 CORS_ORIGIN=http://localhost:5173
 NODE_ENV=debug
