--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,8 +48,9 @@ services:
       # game-service conatiner url (needed to start games)
       - GAME_SERVICE_URL=${GAME_SERVICE_URL}
       # info for internal network use
-      # my credentials to send data to gameplay service
+      # my credentials to send data to gameplay service and gameplay service to delete rooms
       - LOBBY_X_INTERNAL_SERVICE_ID=${LOBBY_X_INTERNAL_SERVICE_ID}
+      - GAMEPLAY_X_INTERNAL_SERVICE_ID=${GAMEPLAY_X_INTERNAL_SERVICE_ID}
       - X_INTERNAL_SECRET=${X_INTERNAL_SECRET}
 
 networks:
